crates/cuda-oxide/crates/cuda-device/tests/compile_fail/thread_index_shared_laundering.stderr
error[E0716]: temporary value dropped while borrowed
  --> tests/compile_fail/thread_index_shared_laundering.rs:11:1
   |
11 | #[device]
   | ^^^^^^^^^
   | |
   | creates a temporary value which is freed while still in use
   | assignment requires that borrow lasts for `'static`
...
18 | }
   | - temporary value is freed at the end of this statement
   |
   = note: this error originates in the attribute macro `device` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0507]: cannot move out of index of `SharedArray<ThreadIndex<'_>, 1>`
  --> tests/compile_fail/thread_index_shared_laundering.rs:17:28
   |
17 |     let _stolen = unsafe { COURIER[0] };
   |                            ^^^^^^^^^^ move occurs because value has type `ThreadIndex<'_>`, which does not implement the `Copy` trait
   |
help: consider borrowing here
   |
17 |     let _stolen = unsafe { &COURIER[0] };
   |                            +
